# table2katex

./: .gitignore  README.md  README_ja.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/table2katex/: cli.py  gen.py  io.py
tests/: test_gen.py  test_io.py
