[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "table2katex"
description = "A simple CLI tool to convert tabular data (CSV, TSV, JSONL) into KaTeX array format."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
]
dynamic = ["version"]


[tool.hatch.build.targets.wheel]
packages = ["src/table2katex"]

[tool.hatch.version]
path = "src/table2katex/__init__.py"

[project.scripts]
table-gen = "table2katex.cli:cli"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.black]
line-length = 99
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 99

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # mccabe
    "C",
    # isrot
    "I",
    # flake8-bugbear
    "B",
    # pyupgrade
    "UP",
]
ignore = [
    "E203",
    "D211",  # Conflict D203
    "D212",  # Conflict D213
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 2

[tool.uv]
dev-dependencies = [
    "tox",
    "tox-uv",
]
